db2fce News - History of user-visible changes
Copyright (C) 2015 credativ GmbH

Version 0.0.4 - Development

* Added !! operator alias for ||
* Added translate() function
* Added hex() function
* Added double() function
* Added months_between() function

Version 0.0.3 - 2015-04-28

* Removed ^= operator alias for pg_lsn and jsonb datatypes for backward
  compatibility

Version 0.0.2 - 2015-04-27

* Corrected schema usage privileges

Version 0.0.1 - 2015-04-27

* Initial version